--- a/CaseStudy/appsettings.json
+++ b/CaseStudy/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\ProjectsV13;Initial Catalog=casestudyDb;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=tcp:phucnguyen2019.database.windows.net,1433;Initial Catalog=casestudyDb;Persist Security Info=False;User ID=Info3067Login;Password=123ABC@@hoho;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
